# CalcEngine

./: CMakeLists.txt  Calc.cpp  Calc.h  Makefile  README.md  env.vim  exe.cmake
Calculator/: CMakeLists.txt  Calc.cpp  Makefile  exe.cmake  mk.old
Engine/: CMakeLists.txt  Divider.cpp  Divider.h  Engine.cpp  Engine.h  EngineFactory.cpp  EngineFactory.h  Makefile  Multiplier.cpp  Multiplier.h  lib.cmake
Test/: CMakeLists.txt  Makefile  TestEngine.cpp  TestEngine.h  exe.cmake
